--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "tailwindcss": "^3.4.17"
   },
   "scripts": {
-    "build":"npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
-  }
+  "build": "tailwindcss -i ./src/css/input.css -o ./src/css/output.css --minify",
+  "dev": "tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
+}
 }
