--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "tailwindcss": "^3.4.17"
   },
   "scripts": {
-  "build": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --minify",
-  "dev": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
-}
+    "build":"npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
+  }
 }
